# realtime_webchat

./: README.MD  docker-compose.yml
back/: Dockerfile  config.py  pyproject.toml  server.py
front/: Dockerfile  package-lock.json  package.json
front/public/: index.html
front/src/: App.css  App.tsx  index.css  path.tsx
front/src/components/: ChatInput.css  ChatInput.tsx  Message.css  Message.tsx  UserModal.css  UserModal.tsx
