[tool.poetry]
name = "realtime-webchat-back"
version = "0.1.0"
description = ""
authors = ["gahyuun <pgh123166@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
redis = "^5.0.7"
aiohttp = "^3.9.5"
asyncio = "^3.4.3"
aiohttp-cors = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
